--- a/files/asb/01-asb-catalogsource-configmap.yaml
+++ b/files/asb/01-asb-catalogsource-configmap.yaml
@@ -9,9 +9,9 @@ data:
     - apiVersion: apiextensions.k8s.io/v1beta1
       kind: CustomResourceDefinition
       metadata:
-        name: automationbrokers.automationbroker.io
+        name: automationbrokers.osb.openshift.io
       spec:
-        group: automationbroker.io
+        group: osb.openshift.io
         names:
           kind: AutomationBroker
           listKind: AutomationBrokerList
@@ -64,7 +64,7 @@ data:
         name: automationbrokeroperator.v0.1.0
         namespace: placeholder
         annotations:
-          alm-examples: '[{"apiVersion":"automationbroker.io/v1alpha1","kind":"AutomationBroker","metadata":{"name":"ansible-service-broker","namespace":"openshift-ansible-service-broker"},"spec":{"createBrokerNamespace":"false","waitForBroker":"false"}}]'
+          alm-examples: '[{"apiVersion":"osb.openshift.io/v1alpha1","kind":"AutomationBroker","metadata":{"name":"ansible-service-broker","namespace":"openshift-ansible-service-broker"},"spec":{"createBrokerNamespace":"false","waitForBroker":"false"}}]'
       spec:
         displayName: Automation Broker Operator
         description: |
@@ -126,7 +126,6 @@ data:
                 - pods
                 - configmaps
                 - secrets
-                - serviceaccounts
                 - services
                 verbs:
                 - "*"
@@ -148,114 +147,17 @@ data:
                 - deploymentconfigs
                 verbs:
                 - "*"
-            - serviceAccountName: ansible-service-broker
-              rules:
-              - apiGroups:
-                - ""
-                resources:
-                - configmaps
-                verbs:
-                - get
-                - delete
-              - apiGroups:
-                - ""
-                resources:
-                - secrets
-                verbs:
-                - create
-                - delete
-                - get
-              - apiGroups:
-                - automationbroker.io
-                resources:
-                - bundles
-                - bundleinstances
-                - bundlebindings
-                verbs:
-                - "*"
             clusterPermissions:
             - serviceAccountName: automation-broker-operator
               rules:
               - apiGroups:
-                - servicecatalog.k8s.io
-                resources:
-                - clusterservicebrokers
-                - servicebrokers
-                verbs:
-                - "*"
-              # Must be cluster scoped, since we're expecting a single operator
-              # to be installed into a designated namespace, watching the full
-              # cluster for CRs.
-              - apiGroups:
-                - automationbroker.io
-                resources:
-                - "*"
-                verbs:
-                - "*"
-              ################################################################################
-              # This may be required to allow the operator to create an aggregated ClusterRole
-              # in order to add the rule that is checked by the broker to edit and/or admin.
-              ################################################################################
-              - apiGroups:
-                - rbac.authorization.k8s.io
-                resources:
-                - clusterroles
-                verbs:
-                - create
-                - patch
-              ################################################################################
-              #
-              ################################################################################
-              # Questionable, could maybe pull these?
-              ################################################################################
-              #- nonResourceURLs:
-              #  - /version/openshift
-              #  verbs:
-              #  - get
-              ##Could maybe try this one with just get?
-              #- apiGroups:
-              #  - apiextensions.k8s.io
-              #  resources:
-              #  - customresourcedefinitions
-              #  verbs:
-              #  - get
-              #  - patch
-              #  - update
-              # OLM should be able to handle these instead of the operator's ansible
-              #- apiGroups:
-              #  - rbac.authorization.k8s.io
-              #  resources:
-              #  - clusterrolebindings
-              #  - clusterroles
-              #  verbs:
-              #  - get
-              #  - patch
-              #  - update
-            - serviceAccountName: ansible-service-broker
-              rules:
-              - apiGroups:
-                - ""
-                resources:
-                - namespaces
-                verbs:
-                - get
-                - create
-                - delete
-              - apiGroups:
-                - ""
-                resources:
-                - pods
-                verbs:
-                - create
-                - get
-                - list
-                - watch
-              - apiGroups:
                 - ""
                 resources:
                 - serviceaccounts
+                - namespaces
+                - pods
                 verbs:
-                - create
+                - "*"
               - apiGroups:
                 - authentication.k8s.io
                 resources:
@@ -271,12 +173,22 @@ data:
               - apiGroups:
                 - rbac.authorization.k8s.io
                 resources:
+                - clusterroles
+                - clusterrolebindings
                 - rolebindings
                 verbs:
                 - create
                 - delete
-              # broker must be able to set up a networkpolicy in the target
-              # namespace to set up a tunnel between the sandbox and the target
+                - patch
+                - get
+                - list
+              - apiGroups:
+                - servicecatalog.k8s.io
+                resources:
+                - clusterservicebrokers
+                - servicebrokers
+                verbs:
+                - "*"
               - apiGroups:
                 - networking.k8s.io
                 resources:
@@ -284,12 +196,24 @@ data:
                 verbs:
                 - create
                 - delete
+                - list
+                - get
               - apiGroups:
                 - authorization.openshift.io
                 resources:
                 - subjectrulesreview
                 verbs:
                 - create
+              - apiGroups:
+                - network.openshift.io
+                - ""
+                resources:
+                - clusternetworks
+                - netnamespaces
+                verbs:
+                - get
+                - update
+                - list
               - apiGroups:
                 - image.openshift.io
                 - ""
@@ -299,22 +223,17 @@ data:
                 - get
                 - list
               - apiGroups:
-                - network.openshift.io
-                - ""
+                - osb.openshift.io
                 resources:
-                - clusternetworks
-                - netnamespaces
+                - "*"
                 verbs:
-                - get
+                - "*"
               - apiGroups:
-                - network.openshift.io
-                - ""
+                - automationbroker.io
                 resources:
-                - netnamespaces
+                - "*"
                 verbs:
-                - update
-            - serviceAccountName: ansible-service-broker-client
-              rules:
+                - "*"
               - nonResourceURLs:
                 - "/osb"
                 - "/osb/*"
@@ -340,8 +259,8 @@ data:
                     serviceAccountName: automation-broker-operator
                     containers:
                     - name: automation-broker-operator
-                      image: docker.io/automationbroker/automation-broker-operator:latest
-                      imagePullPolicy: IfNotPresent
+                      image: docker.io/eriknelson/automation-broker-operator:latest
+                      imagePullPolicy: Always
                       env:
                       - name: IMAGE
                         value: docker.io/ansibleplaybookbundle/origin-ansible-service-broker:v3.11
@@ -351,7 +270,7 @@ data:
                             fieldPath: metadata.namespace
         customresourcedefinitions:
           owned:
-          - name: automationbrokers.automationbroker.io
+          - name: automationbrokers.osb.openshift.io
             version: v1alpha1
             kind: AutomationBroker
             displayName: Automation Broker
@@ -376,3 +295,6 @@ data:
       channels:
       - name: alpha
         currentCSV: automationbrokeroperator.v0.1.0
+
+
+
