--- a/files/asb/01-asb-catalogsource-configmap.yaml
+++ b/files/asb/01-asb-catalogsource-configmap.yaml
@@ -268,6 +268,12 @@ data:
                         valueFrom:
                           fieldRef:
                             fieldPath: metadata.namespace
+                      - name: OPERATOR_NAME
+                        value: automation-broker-operator
+                      - name: POD_NAME
+                        valueFrom:
+                          fieldRef:
+                            fieldPath: metadata.name
         customresourcedefinitions:
           owned:
           - name: automationbrokers.osb.openshift.io
